Changing content of list elements and add img tag in newFeature branch

--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
 <p>Inny paragraf</p>
 
 <ul>
-<li>1</li>
-<li>2</li>
-<li>3</li>
-<li>4</li>
+<li>a</li>
+<li>b</li>
+<li>c</li>
+<li>d</li>
+
+<img src="" alt="">
+
 </ul>
 </body>
 </html>
