Change ul lists elements content

--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 <p>Inny paragraf</p>
 
 <ul>
-<li>a</li>
-<li>b</li>
-<li>c</li>
-<li>d</li>
+<li>ananas</li>
+<li>banan</li>
+<li>cytryna</li>
+<li>figa</li>
 
 <img src="" alt="">
 
