Add comment next to img tag and Add form tag

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 <li>cytryna</li>
 <li>figa</li>
 
-<img src="" alt="">
-
+<img src="" alt=""><!--do usuniecia-->
+<form action=""></form>
 </ul>
 </body>
 </html>
